--- a/test.html
+++ b/test.html
@@ -1,20 +1,27 @@
-<h1> This is a level-1 heading.
-    </h1>
-    This text is followed by a paragraph element.
-    <p> This is a paragraph.
-        </p>
-    This text is followed by a div element.
-    <div> This is a div.
-        </div>
-    This text fills the end. <hr>
-<!-- Empty lines will not be rendered to newline character. -->
+<!DOCTYPE html>
+<head>
+    <title>HTML test</title>
+    <base target="_parent"></base>
+</head>
+<body>
+    <h1> This is a level-1 heading.
+        </h1>
+        This text is followed by a paragraph element.
+        <p> This is a paragraph.
+            </p>
+        This text is followed by a div element.
+        <div> This is a div.
+            </div>
+        This text fills the end. <hr>
+    <!-- Empty lines will not be rendered to newline character. -->
 
 
 
-    This is a br. <br>
-    Newline. <br>
+        This is a br. <br>
+        Newline. <br>
 
-    This is a hyperlink test.
-    <blockquote cite="https://github.com/riku/Markdown-Syntax-CN/blob/master/syntax.md#precode">
-        Markdown 语法说明 (简体中文版) 
-        </blockquote>
+        This is a hyperlink test.
+        <blockquote cite="https://github.com/riku/Markdown-Syntax-CN/blob/master/syntax.md#precode">
+            Markdown 语法说明 (简体中文版)
+            </blockquote>
+</body>
